--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,9 @@
         "test": "./vendor/bin/phpunit --testdox --no-coverage tests --log-events-text phpunit.log",
         "clean": "./vendor/bin/phpcbf -n --standard=./ruleset.xml src/ tests/",
         "phpstan": "./vendor/bin/phpstan analyse --memory-limit=2G",
+        "secure": "php vendor/bin/security-checker security:check composer.lock",
         "prep": [
+            "php vendor/bin/security-checker security:check composer.lock",
             "./vendor/bin/phpcbf -n --standard=./ruleset.xml src/ tests/",
             "./vendor/bin/phpcs -n --colors --standard=./ruleset.xml src/ tests/",
             "./vendor/bin/phpunit --testdox --no-coverage tests --log-events-text phpunit.log",
